# bevy_pixel_perfect

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
examples/: bars.rs  bilinear.rs  lyon.rs  pixelate.rs  simple.rs  tweening.rs  ui.rs
src/: lib.rs  pixel_perfect.wgsl  render.rs
